# CLS-7

./: .gitignore  .gitmodules  AI_USAGE.md  INSTALL.md  README.md  install.md  main.py  my_tests.ipynb  pyproject.toml  requirements.txt  timeliness_data.pkl
code/python_temp_criticality/: INSTALL.md  Timeliness_criticality.py  __init__.py  requirements.txt
code/python_temp_criticality/python_real_world_networks/: Thiers13_example.ipynb  Workplace15_example.ipynb  real_world_networks.py
code/python_temp_criticality/python_synthetic_temporal_networks/: SOC_Analysis.ipynb  SOC_CriticalityMatteo.ipynb  final.ipynb  soc_model.py  soc_tests.py  sparsity.py  stn_simulations.py  stn_simulations_example.ipynb
paper_code/python_temp_criticality/python_real_world_networks/: Thiers13_example.ipynb
paper_code/python_temp_criticality/python_synthetic_temporal_networks/: stn_simulations_example.ipynb
python_temp_criticality/python_synthetic_temporal_networks/: final.ipynb  python_localRules_sim.ipynb  stn_simulations_example.ipynb
theory/: __init__.py  analysis.py  ensemble.py  meanfield_simulation.py  simulation.py  theory.py  timeliness_criticality_simulation.ipynb
